--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<div class="wrapper">
 		<div class="main_content" >
 			<button type="button" class="button  ">Enter</button>
+			<button type="button" class="button  ">Enter</button>
 		</div>
 		<button type="button" class="button btn_round"></button>
 	</div>
